# Clarabel.rs

./: .gitignore  Cargo.toml  WORKSPACE
examples/cc/: BUILD  README.md  WORKSPACE  bazel-bin  bazel-c  bazel-cc  bazel-out  bazel-testlogs  clarabel.BUILD.bazel  example_lp.cc
examples/rust/: example_lp.rs
src/: clarabel.h  lib.rs
src/c/: mod.rs  solver.rs
src/c/include/: algebra.h  clarabel.h  solver.h
src/cc/: BUILD.bazel  algebra.rs  solver.cc  solver.h
src/cc/ffi/: BUILD.bazel  algebra.h  solver.h
